--- a/package.json
+++ b/package.json
@@ -6,28 +6,40 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "clsx": "2.1.0",
+    "framer-motion": "11.0.0",
+    "lucide-react": "0.330.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.22.0",
-    "framer-motion": "11.0.0",
     "react-force-graph-2d": "1.25.0",
-    "scheduler": "0.23.0",
-    "use-dencrypt-effect": "1.0.2",
     "react-powerglitch": "1.0.0",
-    "lucide-react": "0.330.0",
-    "clsx": "2.1.0",
-    "tailwind-merge": "2.2.0"
+    "react-router-dom": "6.22.0",
+    "scheduler": "0.23.0",
+    "tailwind-merge": "2.2.0",
+    "use-dencrypt-effect": "1.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "4.2.0",
+    "@fast-check/jest": "^2.1.1",
     "@originjs/vite-plugin-commonjs": "1.0.3",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.3",
+    "@vitejs/plugin-react": "4.2.0",
     "autoprefixer": "10.4.0",
-    "postcss": "8.4.0",
+    "fast-check": "^4.5.2",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jsdom": "^27.4.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "3.4.1",
-    "vite": "5.1.0"
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.9.3",
+    "vite": "^5.4.21"
   },
   "overrides": {
     "scheduler": "0.23.0"
